Gallery with images and wrap setting

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,89 +1,8 @@
-*, *:before, *:after{box-sizing: border-box;}
-html, body, div, span, object, iframe, figure, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, code, em, img, small, strike, strong, sub, sup, tt, b, u, i, ol, ul, li, fieldset, form, label, table, caption, tbody, tfoot, thead, tr, th, td, main, canvas, embed, footer, header, nav, section, video{
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    text-size-adjust: none;
-}
-footer, header, nav, section, main{display: block;}
-body{line-height: 1;}
-ol, ul{list-style: none;}
-blockquote, q{quotes: none;}
-blockquote:before, blockquote:after, q:before, q:after{content: '';content: none;}
-table{border-collapse: collapse;border-spacing: 0;}
-input{-webkit-appearance: none;border-radius: 0;}
-
-$font-stack:'Castoro', serif;
-$paragraph-color:#4B4B46;
-$title-color:#3B3A34;
-$main-cta-color:#626056;
-$back-color:#FAF9E0;
-$card-color:#ECEBD3;
-$f-size-main-title:48px;
-$f-size-paragraph:24px;
-$f-size-card-title:36px;
-$f-size-footer:20px;
-%center-flex-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-body{font-family: $font-stack; background-color: $back-color;}
+@import "reset";
+@import "variables";
+@import "header";
+@import "portfolio";
+*{scroll-behavior: smooth;}
+body{font-family: $font-stack; background-color: $back-color; }
 h1{font-size: $f-size-main-title; color: $title-color;}
 
-header{
-    display: flex;
-    min-height: 100vh;
-    .img-container{
-        width: 50%;
-        @extend %center-flex-container;
-        text-align: left;
-        img{width: 20vw; transition: 0.8s}
-        img:hover{width: 25vw; }
-        
-    }
-    .text-container{
-        @extend %center-flex-container;
-        flex-direction: column;
-        .content{
-            width: 80%;
-            margin: auto;
-            text-align: center;
-            h1{text-align: left;}
-            p{
-                font-size: $f-size-paragraph;
-                color: $paragraph-color;
-                line-height: 1.5;
-                margin-bottom: 40px;
-                margin-top: 18px;
-                text-align:left ;                
-            }
-            .cta{
-                text-decoration: none; color: $back-color;
-                background-color: $main-cta-color;
-                padding: 15px 20px;
-                border-radius: 12px;
-                transition: background-color 0.4s;
-            }
-            .cta:hover{background-color: $title-color;}
-            .cta:active{background-color: #161614;}
-        }
-        
-    }
-    
-}
-
-@media screen and (max-width:780px){
-    header{
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        .img-container{img{width: 30vw;}img:hover{width: 30vw;}}
-        .text-container{margin-top: 30px;}
-    }
-}
