--- a/css/style.css
+++ b/css/style.css
@@ -51,16 +51,6 @@ header .text-container, header .img-container {
   align-items: center;
 }
 
-body {
-  font-family: "Castoro", serif;
-  background-color: #FAF9E0;
-}
-
-h1 {
-  font-size: 48px;
-  color: #3B3A34;
-}
-
 header {
   display: flex;
   min-height: 100vh;
@@ -97,11 +87,12 @@ header .text-container .content p {
 }
 header .text-container .content .cta {
   text-decoration: none;
-  color: #FAF9E0;
-  background-color: #626056;
   padding: 15px 20px;
   border-radius: 12px;
+  background-color: #626056;
+  color: #FAF9E0;
   transition: background-color 0.4s;
+  text-align: center;
 }
 header .text-container .content .cta:hover {
   background-color: #3B3A34;
@@ -125,6 +116,87 @@ header .text-container .content .cta:active {
   header .text-container {
     margin-top: 30px;
   }
+}
+#portfolio {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+#portfolio h1 {
+  margin: 50px auto;
+}
+#portfolio .gallery {
+  min-height: 55vh;
+  border: 1px solid black;
+  width: 62vw;
+  margin-bottom: 40px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+#portfolio .gallery .card {
+  padding: 5px;
+}
+#portfolio .gallery .card img {
+  width: 200px;
+  height: 200px;
+}
+#portfolio .ctas .contactCta {
+  text-decoration: none;
+  padding: 15px 20px;
+  border-radius: 12px;
+  background-color: #626056;
+  color: #FAF9E0;
+  transition: background-color 0.4s;
+  text-align: center;
+}
+#portfolio .ctas .contactCta:hover {
+  background-color: #3B3A34;
+}
+#portfolio .ctas .contactCta:active {
+  background-color: #161614;
+}
+#portfolio .ctas .teamCta {
+  text-decoration: none;
+  padding: 15px 20px;
+  border-radius: 12px;
+  background-color: rgba(98, 96, 86, 0.3);
+  color: #4B4B46;
+  transition: background-color 0.4s;
+  text-align: center;
+}
+
+@media screen and (max-width: 780px) {
+  #portfolio h1 {
+    margin: 30px;
+    text-align: center;
+  }
+  #portfolio .gallery {
+    margin-bottom: 0px;
+  }
+  #portfolio .ctas {
+    display: flex;
+    flex-direction: column;
+  }
+  #portfolio .ctas a {
+    margin: 10px;
+    text-align: center;
+  }
+}
+* {
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: "Castoro", serif;
+  background-color: #FAF9E0;
+}
+
+h1 {
+  font-size: 48px;
+  color: #3B3A34;
 }
 
 /*# sourceMappingURL=style.css.map */
