--- a/sass/_portfolio.scss
+++ b/sass/_portfolio.scss
@@ -1,4 +1,5 @@
 #portfolio{
+    
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -6,8 +7,8 @@
     justify-content: flex-start;
     h1{margin: 50px auto;}
     .gallery{
+        background-color: $card-color;
         min-height: 55vh;
-        border: 1px solid black;
         width: 62vw;
         margin-bottom: 40px;
         display: flex;
@@ -16,6 +17,7 @@
         .card{
             padding: 5px;
             img{width: 200px; height: 200px;}
+            img:hover{cursor: pointer;}
         }
     }
     .ctas{
@@ -23,6 +25,33 @@
         .contactCta:hover{background-color: $title-color;}
         .contactCta:active{background-color: $cta-active-color;}
         .teamCta{@include cta($paragraph-color,$team-cta-back-color)}
+    }
+    .modal{
+        position: fixed;
+        width: 100vw;
+        height: 100vh;
+        top: 0;
+        background-color: rgba(0,0,0,0.8);
+        @extend %center-flex-container;
+
+        .bx{
+            color: $back-color;
+            font-size: $f-size-main-title;
+            margin: auto 15px;
+        }
+        .bx:hover{cursor: pointer;}
+        .bx-x{
+            position: absolute;
+            top: 10px;
+            right: 20px;
+        }
+        .content{
+            @extend %center-flex-container;
+            img{
+                height: 550px;
+                max-width: 70vw;
+            }
+        }
     }
 }
 @media screen and (max-width:780px){
@@ -34,6 +63,15 @@
         .ctas{
             display: flex; flex-direction: column;
             a{margin: 10px; text-align: center;}
+        }
+        .modal{
+            .content{
+                @extend %center-flex-container;
+                img{
+                    height: auto;
+                    max-width: 60vw;
+                }
+            }
         }
     }
 }
