--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ input {
   border-radius: 0;
 }
 
-#portfolio .modal .content, #portfolio .modal, header .text-container, header .img-container {
+#team .cards, #team, #portfolio .modal .content, #portfolio .modal, header .text-container, header .img-container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -237,6 +237,106 @@ header .text-container .content .cta:active {
     position: absolute;
     right: 10vw;
     bottom: 80px;
+  }
+}
+#team {
+  height: 100vh;
+  min-width: 100vw;
+  flex-direction: column;
+}
+#team h1 {
+  width: 80%;
+  margin: 50px auto;
+  text-align: center;
+}
+#team .cards {
+  width: 80%;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+#team .cards .card {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 25px;
+  width: 20vw;
+  min-height: 60vh;
+  background-color: #ECEBD3;
+  transition: 0.2s;
+  border-radius: 10px;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.25);
+  position: relative;
+}
+#team .cards .card .andrea {
+  background-image: url("../img/people.jpg");
+  width: 15vw;
+  height: 15vw;
+  border-radius: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+#team .cards .card .jhon {
+  background-image: url("../img/people 2.jpg");
+  width: 15vw;
+  height: 15vw;
+  border-radius: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+#team .cards .card .text-content {
+  width: 90%;
+  margin-top: 25px;
+}
+#team .cards .card .text-content h2 {
+  text-align: left;
+  font-size: 36px;
+  color: #3B3A34;
+  margin-bottom: 10px;
+}
+#team .cards .card .text-content p {
+  text-align: left;
+  font-size: 16px;
+  color: #4B4B46;
+  height: 10vh;
+}
+#team .cards .card a {
+  color: #3B3A34;
+  font-size: 36px;
+}
+#team .cards .card:hover {
+  transform: scale(1.1);
+}
+
+@media screen and (max-width: 780px) {
+  #team {
+    height: 200vh;
+  }
+  #team .cards {
+    flex-direction: column;
+  }
+  #team .cards .card {
+    width: 50vw;
+    margin: 25px auto;
+  }
+  #team .cards .card .andrea {
+    background-image: url("../img/people.jpg");
+    width: 30vw;
+    height: 30vw;
+    border-radius: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+  #team .cards .card .jhon {
+    background-image: url("../img/people 2.jpg");
+    width: 30vw;
+    height: 30vw;
+    border-radius: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
   }
 }
 * {
