--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,19 +1,32 @@
-$font-stack:'Castoro', serif;
+$font-stack:'Castoro',
+serif;
 $paragraph-color:#4B4B46;
 $title-color:#3B3A34;
 $main-cta-color:#626056;
 $back-color:#FAF9E0;
 $card-color:#ECEBD3;
-$team-cta-back-color:rgba(98,96,86,0.3);
+$team-cta-back-color:rgba(98, 96, 86, 0.3);
 $cta-active-color: #161614;
 $f-size-main-title:48px;
 $f-size-paragraph:24px;
 $f-size-card-title:36px;
 $f-size-footer:20px;
-%center-flex-container{
+
+%center-flex-container {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+@mixin card-team-image($image, $size) {
+    background-image: url($image);
+    width: $size;
+    height: $size;
+    border-radius: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+
 }
 
 @mixin cta($textColor, $backColor) {
