--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,6 +2,7 @@
 @import "variables";
 @import "header";
 @import "portfolio";
+@import "team";
 *{scroll-behavior: smooth;}
 body{font-family: $font-stack; background-color: $back-color; }
 h1{font-size: $f-size-main-title; color: $title-color;}
