--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ input {
   border-radius: 0;
 }
 
-#contact .form .social-media, #contact, #team .cards, #team, #portfolio .modal .content, #portfolio .modal, header .text-container, header .img-container {
+footer, #contact .form .social-media, #contact, #team .cards, #team, #portfolio .modal .content, #portfolio .modal, header .text-container, header .img-container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -54,6 +54,7 @@ input {
 header {
   display: flex;
   min-height: 100vh;
+  max-width: 100vw;
 }
 header .img-container {
   width: 50%;
@@ -241,7 +242,7 @@ header .text-container .content .cta:active {
 }
 #team {
   height: 100vh;
-  min-width: 100vw;
+  max-width: 100vw;
   flex-direction: column;
 }
 #team h1 {
@@ -341,7 +342,7 @@ header .text-container .content .cta:active {
 }
 #contact {
   min-height: 100vh;
-  flex-wrap: wrap;
+  max-width: 100vw;
 }
 #contact .form {
   width: 45%;
@@ -464,6 +465,21 @@ header .text-container .content .cta:active {
     width: 90%;
   }
 }
+footer {
+  text-align: center;
+  background-color: #3B3A34;
+  min-height: 15vh;
+  max-width: 100vw;
+}
+footer p {
+  color: #FAF9E0;
+  line-height: 1.5;
+}
+footer p a {
+  color: #FAF9E0;
+  font-weight: bold;
+}
+
 * {
   scroll-behavior: smooth;
 }
@@ -471,6 +487,7 @@ header .text-container .content .cta:active {
 body {
   font-family: "Castoro", serif;
   background-color: #FAF9E0;
+  max-width: 100vw;
 }
 
 h1 {
