--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -1,7 +1,7 @@
 #contact {
     @extend %center-flex-container;
     min-height: 100vh;
-    flex-wrap: wrap;
+    max-width: 100vw;
 
     .form {
         width: 45%;
