--- a/sass/_team.scss
+++ b/sass/_team.scss
@@ -1,6 +1,6 @@
 #team {
     height: 100vh;
-    min-width: 100vw;
+    max-width: 100vw;
     @extend %center-flex-container;
     flex-direction: column;
 
