--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,7 +4,8 @@
 @import "portfolio";
 @import "team";
 @import "contact";
+@import "footer";
 *{scroll-behavior: smooth;}
-body{font-family: $font-stack; background-color: $back-color; }
+body{font-family: $font-stack; background-color: $back-color; max-width: 100vw;}
 h1{font-size: $f-size-main-title; color: $title-color;}
 
