--- a/css/style.css
+++ b/css/style.css
@@ -470,6 +470,7 @@ footer {
   background-color: #3B3A34;
   min-height: 15vh;
   max-width: 100vw;
+  padding: 25px;
 }
 footer p {
   color: #FAF9E0;
