--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -4,7 +4,9 @@ footer{
     background-color: $title-color;
     min-height: 15vh;
     max-width: 100vw;
+    padding: 25px;
     p{
+
         color: $back-color;
         line-height: 1.5;
         a{
